--- a/config/theme.yml
+++ b/config/theme.yml
@@ -3,5 +3,5 @@ name: Ilun
 author: Posthaven
 url: https://github.com/posthaven/ilun-theme
 posts_per_page:
-  include_in_settings: false
+  include_in_settings: true
   default: 10
